@@ -51,7 +51,7 @@ test {
 }
 
 jlink {
-  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules', 'jdk.localedata', '--include-locales', 'pl']
   launcher {
     name = 'app'
   }
